# CBI-MMTools

./: .gitignore  .gitmodules  LICENSE.md  README.md  build.xml
DeviceAdapters/: Common.props  Makefile.am  autogen.sh  cbi_mm_devices.sln  configure.ac
DeviceAdapters/ArdIllu/: ArdIllu.cpp  ArdIllu.filters  ArdIllu.h  ArdIllu.vcxproj  Makefile.am
DeviceAdapters/ArdIllu/ArdIlluFirmware/: ArdIllu.fzz  ArdIlluFirmware.ino  ardillu.scad
DeviceAdapters/ArduControl/: ArduControl.cpp  ArduControl.h  ArduControl.vcxproj  ArduControl.vcxproj.filters  Makefile.am
DeviceAdapters/ArduControl/ArduControlFirmware/: ArduControl.fzz  arducontrol.scad
DeviceAdapters/OpenLightControl/: Makefile.am  OpenLightControl.cpp  OpenLightControl.h  OpenLightControl.vcxproj  OpenLightControl.vcxproj.filters
DeviceAdapters/OpenLightControl/OpenLightControlFirmware/: OpenLightControlFirmware.ino
buildscripts/: common.xml  ivy.xml  ivysettings.xml  libraries.xml  plugins.xml
compiled/prints/: OpenLightControl_box.stl  OpenLightControl_lid.stl
libraries/OpticalRotation/: build.xml
libraries/OpticalRotation/src/ch/idiap/cbi/: CalibrationFrame.java  OpticalRotation.java
plugins/OpenLightControl/: build.xml
plugins/OpenLightControl/src/ch/idiap/cbi/: OpenLightControl.java  OpenLightControlFrame.java
plugins/StageControl4D/: build.xml
plugins/StageControl4D/src/ch/idiap/cbi/: StageControl4D.java  StageControl4DFrame.java
software/OLSmodulation/: OLSmodulation.py  demo_modulation.json
