AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ArdIllu.la
libmmgr_dal_ArdIllu_la_SOURCES = ArdIllu.cpp ArdIllu.h \
	../../../micro-manager/MMDevice/MMDevice.h ../../../micro-manager/MMDevice/DeviceBase.h
libmmgr_dal_ArdIllu_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ArdIllu_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
