AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ArduControl.la
libmmgr_dal_ArduControl_la_SOURCES = ArduControl.cpp ArduControl.h \
	../../../micro-manager/MMDevice/MMDevice.h ../../../micro-manager/MMDevice/DeviceBase.h
libmmgr_dal_ArduControl_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ArduControl_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
