AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_OpenLightControl.la
libmmgr_dal_OpenLightControl_la_SOURCES = OpenLightControl.cpp OpenLightControl.h \
	../../../micro-manager/MMDevice/MMDevice.h ../../../micro-manager/MMDevice/DeviceBase.h
libmmgr_dal_OpenLightControl_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_OpenLightControl_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
